--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
   "dependencies": {
     "axios": "^0.19.0",
     "expo": "^35.0.0",
+    "native-base": "^2.13.8",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-axios": "^0.17.1",
+    "react-native-gesture-handler": "~1.3.0",
+    "react-native-reanimated": "~1.2.0",
+    "react-native-screens": "~1.0.0-alpha.23",
+    "react-native-stack": "^1.0.0-alpha11",
     "react-native-web": "^0.11.7",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.10.3",
     "request": "^2.88.0"
   },
   "devDependencies": {
